bk_ida/gccida/c1/copy_insn_list
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/copy_insn_list/src/integrate.c:1786:4: error: expected ';' after expression
rtx v8; // r13 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/copy_insn_list/src/integrate.c:1786:5: error: use of undeclared identifier 'v8'
rtx v8; // r13 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/copy_insn_list/src/integrate.c:1788:4: error: expected ';' after expression
rtx v10; // r13 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/copy_insn_list/src/integrate.c:1788:5: error: use of undeclared identifier 'v10'
rtx v10; // r13 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/copy_insn_list/src/integrate.c:1803:4: error: expected ';' after expression
rtx inline_target; // rcx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/copy_insn_list/src/integrate.c:1803:5: error: use of undeclared identifier 'inline_target'
rtx inline_target; // rcx 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/copy_insn_list/src/integrate.c:1805:4: error: expected ';' after expression
rtx v27; // rbp 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/copy_insn_list/src/integrate.c:1805:5: error: use of undeclared identifier 'v27'
rtx v27; // rbp 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/copy_insn_list/src/integrate.c:1806:4: error: expected ';' after expression
rtx v28; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/copy_insn_list/src/integrate.c:1806:5: error: use of undeclared identifier 'v28'
rtx v28; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/copy_insn_list/src/integrate.c:1814:4: error: expected ';' after expression
rtx v36; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/copy_insn_list/src/integrate.c:1814:5: error: use of undeclared identifier 'v36'
rtx v36; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/copy_insn_list/src/integrate.c:1819:4: error: expected ';' after expression
rtx y; // [rsp+8h] [rbp-50h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/copy_insn_list/src/integrate.c:1819:5: error: use of undeclared identifier 'y'
rtx y; // [rsp+8h] [rbp-50h] 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/copy_insn_list/src/integrate.c:1820:4: error: expected ';' after expression
rtx arg0[9]; // [rsp+10h] [rbp-48h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/copy_insn_list/src/integrate.c:1820:5: error: use of undeclared identifier 'arg0'
rtx arg0[9]; // [rsp+10h] [rbp-48h] 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/copy_insn_list/src/integrate.c:1832:27: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v7 = ( unsigned __int16 *)rtx[2]; 
                          ^~~~~~
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/copy_insn_list/src/integrate.c:1835:1: error: use of undeclared identifier 'v8'
v8 = ( rtx)rtx[2]; 
^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/copy_insn_list/src/integrate.c:1837:1: error: use of undeclared identifier 'v8'
v8 = single_set_2( rtx, *( rtx *)&rtx[2]); 
^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/copy_insn_list/src/obj/integrate.o] Error 1
